--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button id="startButton" onclick="window.location.href='./game.html'">
       Inizia a Giocare
     </button>
-    <img id="startImage" src="./media/Bergamo-Stemma.png" alt="Stemma di Bergamo" />
+    <img id="game-image" src="./media/Bergamo-Stemma.png" alt="Stemma di Bergamo" />
   </div>
 
   <script src="script.js"></script>
