--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./BergamoChallenge/index.html">Bergamo Challenge</a></li>
         <li><a href="./TMDB/index.html">TMDB Search</a></li>
+        <li><a href="./TMDB/index.html">TMDB Search</a></li>
     </ul>
 </body>
 </html>
