--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./BergamoChallenge/index.html">Bergamo Challenge</a></li>
         <li><a href="./TMDB/index.html">TMDB Search</a></li>
-        <li><a href="./Brani_Hosting/Alaska_Baby/1-Alaska Baby.mp3">ALASKA BABY</a></li>
+        <li><a href="./Brani_Hosting/Alaska_Baby/album.html">ALASKA BABY</a></li>
     </ul>
 </body>
 </html>
