--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smatjoy's hosting hub</title>
-</head>
-<body>
+  </head>
+  <body>
     <center><h1>Smatjoy's hosting hub</h1></center>
     <ul>
-        <li><a href="./BergamoChallenge/index.html">Bergamo Challenge</a></li>
-        <li><a href="./TMDB/index.html">TMDB Search</a></li>
-        <li><a href="./Brani_Hosting/brani.php">ALASKA BABY</a></li>
+      <li><a href="./BergamoChallenge/index.html">Bergamo Challenge</a></li>
+      <li><a href="./TMDB/index.html">TMDB Search</a></li>
+      <li><a href="./Brani_Hosting/brani.php" onclick="window.location.href = './Brani_Hosting/brani.php'; return false;">ALASKA BABY</a></li>
     </ul>
-</body>
+  </body>
 </html>
