--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
       <li><a href="./BergamoChallenge/index.html">Bergamo Challenge</a></li>
       <li><a href="./TMDB/index.html">TMDB Search</a></li>
-      <li><a href="./Brani_Hosting/brani.php" onclick="window.location.href = './Brani_Hosting/brani.php'; return false;">ALASKA BABY</a></li>
+      <li><a href="#" style="cursor: pointer; color: blue; text-decoration: underline;" onclick="window.location.href = './Brani_Hosting/brani.php'; return false;">ALASKA BABY</a></li>
     </ul>
   </body>
 </html>
